@@ -2,6 +2,8 @@ package com.example.lead_manager.model;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
+
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -27,11 +29,17 @@ public class Users implements UserDetails {
     private String id;
     private String username;
     private String password;
-    private String role;
+    private UserRole role;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(role));
+        if(this.role == UserRole.ADMIN ){
+            return List.of(new SimpleGrantedAuthority("ROLE_ADMIN"), new SimpleGrantedAuthority("ROLE_USER"));
+        } 
+        else {
+            return List.of(new SimpleGrantedAuthority("ROLE_USER"));
+        }
+
     }
 
     @Override
